2010-05-06  Simon Hausmann  <simon.hausmann@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Replace public inspector url with private property for QtLauncher
        https://bugs.webkit.org/show_bug.cgi?id=35340

        Replace the public API with a private dynamic property until this feature
        is ready.

        * QtLauncher/main.cpp:
        (LauncherWindow::init):

2010-05-20  Simon Hausmann  <simon.hausmann@nokia.com>

        Reviewed by Tor Arne Vestbo.

        [Qt] Weekly binary builds on Mac OS X don't work when launched in the Finder
        https://bugs.webkit.org/show_bug.cgi?id=37273

        * QtTestBrowser/QtTestBrowser.pro: Build QtLauncher as bundle in package builds

2010-05-14  Simon Hausmann  <simon.hausmann@nokia.com>

        Rubber-stamped by Antti Koivisto.

        [Qt] Rename QtLauncher to QtTestBrowser
        https://bugs.webkit.org/show_bug.cgi?id=37665

        * QtLauncher/QtLauncher.pro: Removed.
        * QtTestBrowser/QtTestBrowser.pro: Added.
        * QtTestBrowser/QtTestBrowser.qrc: Renamed from WebKitTools/QtLauncher/QtLauncher.qrc.
        * QtTestBrowser/fpstimer.cpp: Renamed from WebKitTools/QtLauncher/fpstimer.cpp.
        * QtTestBrowser/fpstimer.h: Renamed from WebKitTools/QtLauncher/fpstimer.h.
        * QtTestBrowser/locationedit.cpp: Renamed from WebKitTools/QtLauncher/locationedit.cpp.
        * QtTestBrowser/locationedit.h: Renamed from WebKitTools/QtLauncher/locationedit.h.
        * QtTestBrowser/main.cpp: Renamed from WebKitTools/QtLauncher/main.cpp.
        * QtTestBrowser/mainwindow.cpp: Renamed from WebKitTools/QtLauncher/mainwindow.cpp.
        * QtTestBrowser/mainwindow.h: Renamed from WebKitTools/QtLauncher/mainwindow.h.
        * QtTestBrowser/urlloader.cpp: Renamed from WebKitTools/QtLauncher/urlloader.cpp.
        * QtTestBrowser/urlloader.h: Renamed from WebKitTools/QtLauncher/urlloader.h.