@@ -54,6 +54,7 @@ public:
 public slots:
     void openUrlInDefaultBrowser(const QUrl& url = QUrl());
     void setUserAgent(const QString& ua) { m_userAgent = ua; }
+    void authenticationRequired(QNetworkReply*, QAuthenticator*);
 
 private:
     void applyProxy();
